syntax = "proto3";
package comdex.liquidation.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/liquidation/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

service Msg {
  rpc WhitelistApp(WhitelistAppId) returns (MsgWhitelistAppIdResponse);
  rpc RemoveWhitelistApp(RemoveWhitelistAppId) returns (MsgRemoveWhitelistAppIdResponse);
}

message WhitelistAppId {
  uint64 app_id   = 1 [
    (gogoproto.moretags) = "yaml:\"app_id\""
  ];

  string from    = 2 [
    (gogoproto.moretags) = "yaml:\"from\""
  ];
}

message RemoveWhitelistAppId {
  uint64 app_id   = 1 [
    (gogoproto.moretags) = "yaml:\"app_id\""
  ];

  string from    = 2 [
    (gogoproto.moretags) = "yaml:\"from\""
  ];
}

message MsgWhitelistAppIdResponse {}

message MsgRemoveWhitelistAppIdResponse {}
